--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
-        <a href="index.html"><h5 class="text-white h4">Blog Posts</h5></a>
+        <a href="index.html"><h5 class="text-white h4">Feed</h5></a>
         <a href="profile.html"><h5 class="text-white h4">About</h5></a>
         <a href="authentication.html"><h5 class="text-white h4">Log in</h5></a>
       </div>
