--- a/profile-index.html
+++ b/profile-index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-primary p-4">
-          <a href="index.html"><h5 class="text-white h4">Feed</h5></a>
-          <a href="profile.html"><h5 class="text-white h4">About</h5></a>
-          <a href="authentication.html"><h5 class="text-white h4">Log in</h5></a>
-        </div>
+      <div class="bg-primary p-4">
+        <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
+        <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
+        <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
+      </div>
       </div>
       <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
@@ -49,6 +49,13 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <h3>My Runs</h3>
+    <div class="d-flex running-data">
+      
+    </div>
+  </div>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/scriptprofile.js"></script>
 </body>
 </html>
