--- a/index.html
+++ b/index.html
@@ -1,164 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis."
-    />
-    <link
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/index.css" />
-    <script defer src="js/scriptfeed.js"></script>
-    <title>Sigrid Feed</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+  <title>Authentication</title>
+</head>
+<body class="bg-light">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
-        <a href="index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="profile.html"><h5 class="text-white h4">About</h5></a>
-        <a href="authentication.html"><h5 class="text-white h4">Log in</h5></a>
+        <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
+        <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
+        <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
       </div>
-    </div>
-    <nav class="navbar navbar-dark bg-primary">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent"
-          aria-controls="navbarToggleExternalContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
       </div>
-    </nav>
-    <div class="container py-4">
-      <h1>Feed</h1>
-      <div class="mb-3">
-        <input type="text" class="form-control" placeholder="Search..." />
-      </div>
-      <div class="d-flex justify-content-between mb-3">
-        <div>Sort by: <a href="#">Latest</a> | <a href="#">Popular</a></div>
-        <button
-          class="btn btn-primary"
-          data-bs-toggle="modal"
-          data-bs-target="#newPostModal"
-        >
-          Create Post
-        </button>
-      </div>
-      <div class="row">
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>01.11.23</h5>
-              <p class="card-text">
-                I drank beer today, that was good. Arsenal went out of the
-                Carabao Cup. They don't need that consolation trophy
-              </p>
-              <button class="btn btn-primary like-btn" data-id="post3"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-<button class="btn btn-danger dislike-btn" data-id="post3"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
+      <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>31.10.23</h5>
-              <p class="card-text">
-                I wanted to die today, asked Thomas for advice, and he suggested
-                to take a lot of Paralgin Forte
-              </p>
-              
-              <button class="btn btn-primary like-btn" data-id="post2"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-              <button class="btn btn-danger dislike-btn" data-id="post2"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>30.10.23</h5>
-              <p class="card-text">
-                My name is Sigrid, and this is my home feed for my blog-post.
-                Thank you for reading my first post. Have an OK day!
-              </p>
-              <button class="btn btn-primary like-btn" data-id="post1"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-<button class="btn btn-danger dislike-btn" data-id="post1"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
-        </div>
-        <!-- ... More Post Thumbnails ... -->
-      </div>
-    </div>
-
-    <!-- New Post Modal -->
-    <div
-      class="modal fade"
-      id="newPostModal"
-      tabindex="-1"
-      aria-labelledby="newPostModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="newPostModalLabel">New Post</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- New Post Form -->
-            <form>
+      </nav>
+  <div class="container d-flex align-items-center min-vh-100">
+    <div class="row w-100">
+      <div class="col-md-6 mx-auto">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title text-center mb-4">Login or Register</h2>
+            <form action="/profile" method="post">
               <div class="mb-3">
-                <label for="postTitle" class="form-label h5">Date</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="postDate"
-                  required
-                />
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" required>
               </div>
               <div class="mb-3">
-                <label for="postContent" class="form-label">Content</label>
-                <textarea
-                  class="form-control"
-                  id="postContent"
-                  rows="3"
-                  required
-                ></textarea>
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" required minlength="8">
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary w-100">Submit</button>
             </form>
           </div>
         </div>
       </div>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+  </div>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
