--- a/feed-index.html
+++ b/feed-index.html
@@ -62,6 +62,23 @@
               alt="..."
             />
             <div class="card-body">
+              <h5>05.11.23</h5>
+              <p class="card-text">
+                Check out my profile! I just added all my running data, and I will continue sharing my runs. I usually run 120km a month.
+              </p>
+              <button class="btn btn-primary like-btn" data-id="post3"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
+<button class="btn btn-danger dislike-btn" data-id="post3"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card" style="width: 16rem">
+            <img
+              src="images/profileDora.JPG"
+              class="card-img-top w-75"
+              alt="..."
+            />
+            <div class="card-body">
               <h5>01.11.23</h5>
               <p class="card-text">
                 I drank beer today, that was good. Arsenal went out of the
