Update after feedback

--- a/profile/index.html
+++ b/profile/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
-        <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
+        <a href="feed/index.html"><h5 class="text-white h4">Feed</h5></a>
+        <a href="profile/index.html"><h5 class="text-white h4">Profile</h5></a>
         <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
       </div>
       </div>
