Update after feedback

--- a/feed/index.html
+++ b/feed/index.html
@@ -16,28 +16,30 @@
     <title>Sigrid Feed</title>
   </head>
   <body>
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-primary p-4">
-        <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
-        <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
+    <header>
+      <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-primary p-4">
+          <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
+          <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
+          <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
+        </div>
       </div>
-    </div>
-    <nav class="navbar navbar-dark bg-primary">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent"
-          aria-controls="navbarToggleExternalContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </nav>
+      <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+    </header>
     <div class="container py-4">
       <h1>Feed</h1>
       <div class="mb-3">
