--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Authentication</title>
 </head>
 <body class="bg-light">
+  <header>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
         <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
@@ -22,6 +23,7 @@
           </button>
         </div>
       </nav>
+  </header>
   <div class="container d-flex align-items-center min-vh-100">
     <div class="row w-100">
       <div class="col-md-6 mx-auto">
