--- a/profile/index.html
+++ b/profile/index.html
@@ -8,6 +8,7 @@
   <title>Sigrid Profile</title>
 </head>
 <body>
+  <header>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
         <a href="feed/index.html"><h5 class="text-white h4">Feed</h5></a>
@@ -22,6 +23,7 @@
           </button>
         </div>
       </nav>
+  </header>
   <div class="container py-4">
     <div class="row">
       <div class="col-md-4">
