Update after feedback

--- a/feed/index.html
+++ b/feed/index.html
@@ -8,20 +8,20 @@
       content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis."
     />
     <link
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/index.css" />
-    <script defer src="js/scriptfeed.js"></script>
+    <script defer src="/js/scriptfeed.js"></script>
     <title>Sigrid Feed</title>
   </head>
   <body>
     <header>
       <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-primary p-4">
-          <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
-          <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
-          <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
+          <a href="/feed/index.html"><h5 class="text-white h4">Feed</h5></a>
+        <a href="/profile/index.html"><h5 class="text-white h4">Profile</h5></a>
+        <a href="/index.html"><h5 class="text-white h4">Log in</h5></a>
         </div>
       </div>
       <nav class="navbar navbar-dark bg-primary">
@@ -59,7 +59,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 16rem">
             <img
-              src="images/profileDora.JPG"
+              src="/images/profileDora.JPG"
               class="card-img-top w-75"
               alt="..."
             />
@@ -76,7 +76,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 16rem">
             <img
-              src="images/profileDora.JPG"
+              src="/images/profileDora.JPG"
               class="card-img-top w-75"
               alt="..."
             />
@@ -94,7 +94,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 16rem">
             <img
-              src="images/profileDora.JPG"
+              src="/images/profileDora.JPG"
               class="card-img-top w-75"
               alt="..."
             />
@@ -112,7 +112,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" style="width: 16rem">
             <img
-              src="images/profileDora.JPG"
+              src="/images/profileDora.JPG"
               class="card-img-top w-75"
               alt="..."
             />
@@ -177,6 +177,6 @@
         </div>
       </div>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
