--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
-        <a href="feed-index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="profile-index.html"><h5 class="text-white h4">Profile</h5></a>
+        <a href="./feed/index.html"><h5 class="text-white h4">Feed</h5></a>
+        <a href="./profile/index.html"><h5 class="text-white h4">Profile</h5></a>
         <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
       </div>
       </div>
@@ -38,8 +38,12 @@
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" required minlength="8">
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Submit</button>
+              </div> 
+
+                <button type="submit" class="btn btn-primary w-100"> <a href="./profile/index.html">
+                  Submit
+                </a>
+                </button>
             </form>
           </div>
         </div>
