--- a/profile/index.html
+++ b/profile/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/index.css">
   <title>Sigrid Profile</title>
 </head>
 <body>
   <header>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-primary p-4">
-        <a href="feed/index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="profile/index.html"><h5 class="text-white h4">Profile</h5></a>
-        <a href="index.html"><h5 class="text-white h4">Log in</h5></a>
+        <a href="/feed/index.html"><h5 class="text-white h4">Feed</h5></a>
+        <a href="/profile/index.html"><h5 class="text-white h4">Profile</h5></a>
+        <a href="/index.html"><h5 class="text-white h4">Log in</h5></a>
       </div>
       </div>
       <nav class="navbar navbar-dark bg-primary">
@@ -27,7 +27,7 @@
   <div class="container py-4">
     <div class="row">
       <div class="col-md-4">
-        <img src="images/profileDora.JPG" alt="Profile" class="img-fluid rounded-circle mb-3 w-75">
+        <img src="/images/profileDora.JPG" alt="Profile" class="img-fluid rounded-circle mb-3 w-75">
         <h3>Sigrid1997</h3>
         <button class="btn btn-primary w-50">Follow</button>
         <div class="mt-3">
@@ -57,7 +57,7 @@
       
     </div>
   </div>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/scriptprofile.js"></script>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/scriptprofile.js"></script>
 </body>
 </html>
