--- a/feed/index.html
+++ b/feed/index.html
@@ -11,7 +11,7 @@
       href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/src/scss/index.css" />
     <script defer src="/js/scriptfeed.js"></script>
     <title>Sigrid Feed</title>
   </head>
