--- a/feed/index.html
+++ b/feed/index.html
@@ -12,171 +12,94 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/scss/index.css" />
-    <script defer src="/js/scriptfeed.js"></script>
-    <title>Sigrid Feed</title>
+    <script src="../js/variables.mjs" type="module"></script>
+    <script src="../js/fetchAllPosts.mjs" type="module"></script>
+    <script src="../js/sortPost.mjs" type="module"></script>
+    <script src="../js/createPost.mjs" type="module"></script>
+    <script src="../js/sortPost.mjs" type="module"></script>
+    <script src="../js/searchFunction.mjs" type="module"></script>
+    <script type="module">
+      import { checkLoginStatus, logoutUser } from "../js/login.mjs";
+  
+      document.addEventListener("DOMContentLoaded", () => {
+        if (!checkLoginStatus()) {
+          window.location.href = "/index.html";
+        }
+  
+        const signOutButton = document.getElementById("signOutButton");
+        signOutButton.classList.remove("d-none");
+        signOutButton.addEventListener("click", logoutUser);
+      });
+    </script>
+    <title>SLXEED Feed</title>
   </head>
   <body>
     <header>
-      <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-primary p-4">
-          <a href="/feed/index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="/profile/index.html"><h5 class="text-white h4">Profile</h5></a>
-        <a href="/index.html"><h5 class="text-white h4">Log in</h5></a>
-        </div>
-      </div>
-      <nav class="navbar navbar-dark bg-primary">
+      <nav class="navbar fixed-top navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <a class="navbar-brand fs-1 ms-3" href="../index.html">SLXEED</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link ms-3" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-3" href="/profile/">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-3 active" aria-current="page" href="/feed/">Feed</a>
+              </li>
+            </ul>
+            <button class="btn btn-outline-danger d-none" id="signOutButton">Sign Out</button>
+          </div>
         </div>
       </nav>
     </header>
-    <div class="container py-4">
-      <h1>Feed</h1>
-      <div class="mb-3">
-        <input type="text" class="form-control" placeholder="Search..." />
-      </div>
-      <div class="d-flex justify-content-between mb-3">
-        <div>Sort by: <a href="#">Latest</a> | <a href="#">Popular</a></div>
-        <button
-          class="btn btn-primary"
-          data-bs-toggle="modal"
-          data-bs-target="#newPostModal"
-        >
-          Create Post
-        </button>
-      </div>
-      <div class="row">
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="/images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>05.11.23</h5>
-              <p class="card-text">
-                Check out my profile! I just added all my running data, and I will continue sharing my runs. I usually run 120km a month.
-              </p>
-              <button class="btn btn-primary like-btn" data-id="post3"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-<button class="btn btn-danger dislike-btn" data-id="post3"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="/images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>01.11.23</h5>
-              <p class="card-text">
-                I drank beer today, that was good. Arsenal went out of the
-                Carabao Cup. They don't need that consolation trophy
-              </p>
-              <button class="btn btn-primary like-btn" data-id="post3"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-<button class="btn btn-danger dislike-btn" data-id="post3"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="/images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>31.10.23</h5>
-              <p class="card-text">
-                It was Halloween today. I moved to Holmen. New chapter in my life. Cheers.
-              </p>
-              
-              <button class="btn btn-primary like-btn" data-id="post2"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-              <button class="btn btn-danger dislike-btn" data-id="post2"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-3">
-          <div class="card" style="width: 16rem">
-            <img
-              src="/images/profileDora.JPG"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>30.10.23</h5>
-              <p class="card-text">
-                My name is Sigrid, and this is my home feed for my blog-post.
-                Thank you for reading my first post. Have an OK day!
-              </p>
-              <button class="btn btn-primary like-btn" data-id="post1"><i class="bi bi-hand-thumbs-up"></i> <span class="like-count">0</span></button>
-<button class="btn btn-danger dislike-btn" data-id="post1"><i class="bi bi-hand-thumbs-down"></i> <span class="dislike-count">0</span></button>
-            </div>
-          </div>
-        </div>
-        <!-- ... More Post Thumbnails ... -->
-      </div>
-    </div>
-
-    <!-- New Post Modal -->
-    <div
-      class="modal fade"
-      id="newPostModal"
-      tabindex="-1"
-      aria-labelledby="newPostModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="newPostModalLabel">New Post</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- New Post Form -->
-            <form>
-              <div class="mb-3">
-                <label for="postTitle" class="form-label h5">Date</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="postDate"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="postContent" class="form-label">Content</label>
-                <textarea
-                  class="form-control"
-                  id="postContent"
-                  rows="3"
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+    <main>
+      <h1 class="visually-hide mb-5">Feed</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <form class="d-flex mb-3">
+              <input
+                type="search"
+                class="form-control me-2"
+                id="searchInput"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-primary" type="button" id="searchButton">Search</button>
             </form>
           </div>
+          <div class="col-md-4">
+            <button class="btn btn-primary" type="button" id="sortButton">Sort by date</button>
+            <button class="btn btn-success" type="button" id="createPostButton">Create post</button>
+
+          </div>
         </div>
       </div>
-    </div>
+      <div class="container" id="postContainer"></div>
+      <div>
+
+      </div>
+
+
+      
+    </main>
+    <footer class="py-3 my-4 mt-5">
+      <hr>
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      </ul>
+      <p class="text-center text-muted">SLXEED</p>
+      <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
+    </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
