--- a/profile/index.html
+++ b/profile/index.html
@@ -1,63 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/src/scss/index.css">
-  <title>Sigrid Profile</title>
-</head>
-<body>
-  <header>
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-primary p-4">
-        <a href="/feed/index.html"><h5 class="text-white h4">Feed</h5></a>
-        <a href="/profile/index.html"><h5 class="text-white h4">Profile</h5></a>
-        <a href="/index.html"><h5 class="text-white h4">Log in</h5></a>
-      </div>
-      </div>
-      <nav class="navbar navbar-dark bg-primary">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/scss/index.css" />
+    <script src="../js/fetchProfile.mjs" type="module"></script>
+    <script src="../js/renderProfilePosts.mjs" type="module"></script>
+    <script src="../js/delete-post.mjs" type="module"></script>
+    <script type="module">
+      import { checkLoginStatus, logoutUser } from "../js/login.mjs";
+  
+      document.addEventListener("DOMContentLoaded", () => {
+        if (!checkLoginStatus()) {
+          window.location.href = "/index.html";
+        }
+  
+        const signOutButton = document.getElementById("signOutButton");
+        signOutButton.classList.remove("d-none");
+        signOutButton.addEventListener("click", logoutUser);
+      });
+    </script>
+    <title>SLXEED Profile</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar fixed-top navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand fs-1 ms-3" href="../index.html">SLXEED</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link ms-3" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-3 active" aria-current="page" href="/profile/">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-3" href="/feed/">Feed</a>
+              </li>
+            </ul>
+            <button class="btn btn-outline-danger d-none" id="signOutButton">Sign Out</button>
+          </div>
         </div>
       </nav>
-  </header>
-  <div class="container py-4">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="/images/profileDora.JPG" alt="Profile" class="img-fluid rounded-circle mb-3 w-75">
-        <h3>Sigrid1997</h3>
-        <button class="btn btn-primary w-50">Follow</button>
-        <div class="mt-3">
-          <strong>Followers:</strong> 1049<br>
-          <strong>Following:</strong> 134
-        </div>
+    </header>
+    <main>
+      <h1 class="visually-hide mb-5">Profile</h1>
+      <img
+        id="userAvatar"
+        src=" "
+        class="profile-img mt-5 mb-2 mx-auto d-block rounded-circle"
+        alt="Profile image"
+      />
+      <h2 id="userName" class="text-center my-1"></h2>
+      <div class="text-center my-4">
       </div>
-      <div class="col-md-8">
-        <h4>Rule of Life</h4>
-        <div class="card mb-3">
-          <div class="card-body">
-            1. Always find a way to win
-          </div>
-          <div class="card-body">
-            2. Create as much chaos as you can
-          </div>
-          <div class="card-body">
-            3. Never admit defeat
-          </div>
-        </div>
+
+      <h3 class="text-center my-3">My posts</h3>
+
+
+      <div class="container">
+        <div class="row user-posts_profile-page gy-4"></div>
       </div>
-    </div>
-  </div>
-  <div class="container">
-    <h3>My Runs</h3>
-    <div class="d-flex running-data">
-      
-    </div>
-  </div>
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/scriptprofile.js"></script>
-</body>
+    </main>
+    <footer class="py-3 my-4 mt-5">
+      <hr>
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      </ul>
+      <p class="text-center text-muted">SLXEED</p>
+      <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
+    </footer>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    
+
+  </body>
 </html>
