--- a/feed/index.html
+++ b/feed/index.html
@@ -11,7 +11,8 @@
       href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/scss/index.css" />
+    <link rel="stylesheet" href="/dist/css/index.css"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="../js/variables.mjs" type="module"></script>
     <script src="../js/fetchAllPosts.mjs" type="module"></script>
     <script src="../js/sortPost.mjs" type="module"></script>
