--- a/profile/index.html
+++ b/profile/index.html
@@ -7,7 +7,8 @@
       href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/scss/index.css" />
+    <link rel="stylesheet" href="/dist/css/index.css"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="../js/fetchProfile.mjs" type="module"></script>
     <script src="../js/renderProfilePosts.mjs" type="module"></script>
     <script src="../js/delete-post.mjs" type="module"></script>
