--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
      <h3>Welcome to SLXEED</h3>
       <p>Share your posts with friends and followers!</p>
     </div>
-    <div id="registerContainer" class="mt-4">
-      <h2>Register</h2>
+    <div id="registerContainer" class="mt-4 registerContainer">
       <form id="registerForm">
+        <p>Don't have a user yet?</p>
+        <h2>Sign Up</h2>
         <div class="mb-3">
           <label for="inputName" class="form-label">Name</label>
           <input type="text" class="form-control" id="inputName" required pattern="^[a-zA-Z0-9_]+$" title="Name must not contain punctuation symbols apart from underscore (_)">
