--- a/feed/index.html
+++ b/feed/index.html
@@ -1,106 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis."
-    />
-    <link
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/dist/css/index.css"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <script src="../js/variables.mjs" type="module"></script>
-    <script src="../js/fetchAllPosts.mjs" type="module"></script>
-    <script src="../js/sortPost.mjs" type="module"></script>
-    <script src="../js/createPost.mjs" type="module"></script>
-    <script src="../js/sortPost.mjs" type="module"></script>
-    <script src="../js/searchFunction.mjs" type="module"></script>
-    <script type="module">
-      import { checkLoginStatus, logoutUser } from "../js/login.mjs";
-  
-      document.addEventListener("DOMContentLoaded", () => {
-        if (!checkLoginStatus()) {
-          window.location.href = "/index.html";
-        }
-  
-        const signOutButton = document.getElementById("signOutButton");
-        signOutButton.classList.remove("d-none");
-        signOutButton.addEventListener("click", logoutUser);
-      });
-    </script>
-    <title>SLXEED Feed</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar fixed-top navbar-expand-lg bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand fs-1 ms-3" href="../index.html">SLXEED</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link ms-3" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-3" href="/profile/">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-3 active" aria-current="page" href="/feed/">Feed</a>
-              </li>
-            </ul>
-            <button class="btn btn-outline-danger d-none" id="signOutButton">Sign Out</button>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis."
+  />
+  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/dist/css/index.css"/>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script src="../js/variables.mjs" type="module"></script>
+  <script src="../js/fetchAllPosts.mjs" type="module"></script>
+  <script src="../js/sortPost.mjs" type="module"></script>
+  <script src="../js/createPost.mjs" type="module"></script>
+  <script src="../js/searchFunction.mjs" type="module"></script>
+  <script type="module">
+    import { checkLoginStatus, logoutUser } from "../js/login.mjs";
+
+    document.addEventListener("DOMContentLoaded", () => {
+      if (!checkLoginStatus()) {
+        window.location.href = "/index.html";
+      }
+
+      const signOutButton = document.getElementById("signOutButton");
+      signOutButton.classList.remove("d-none");
+      signOutButton.addEventListener("click", logoutUser);
+    });
+  </script>
+  <title>SLXEED Feed</title>
+</head>
+<body>
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg bg-white">
+      <div class="container-fluid">
+        <a class="navbar-brand fs-1 ms-3" href="../index.html">SLXEED</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="/profile/">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3 active" aria-current="page" href="/feed/">Feed</a>
+            </li>
+          </ul>
+          <button class="btn btn-outline-danger d-none" id="signOutButton">Sign Out</button>
         </div>
-      </nav>
-    </header>
-    <main>
-      <h1 class="visually-hide mb-5">Feed</h1>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <form class="d-flex mb-3">
-              <input
-                type="search"
-                class="form-control me-2"
-                id="searchInput"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-primary" type="button" id="searchButton">Search</button>
+      </div>
+    </nav>
+  </header>
+  <main class="container mt-5">
+    <h1 class="visually-hidden mb-5">Feed</h1>
+
+    <div class="mb-4 search-post-bar">
+      <div class="d-flex justify-content-between mb-3">
+        <form class="d-flex w-75">
+          <input type="search" class="form-control me-2" id="searchInput" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-primary" type="button" id="searchButton">Search</button>
+        </form>
+        <div class="dropdown">
+          <button class="btn btn-success dropdown-toggle" type="button" id="createPostButton" data-bs-toggle="dropdown" aria-expanded="false">Create post</button>
+          <div class="dropdown-menu p-4" aria-labelledby="createPostButton">
+            <form id="newPostForm">
+              <div class="mb-3">
+                <label for="postTitle" class="form-label">Title</label>
+                <input type="text" class="form-control" id="postTitle" required>
+              </div>
+              <div class="mb-3">
+                <label for="postContent" class="form-label">Content</label>
+                <textarea class="form-control" id="postContent" rows="3" required></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="postImage" class="form-label">Image URL (optional)</label>
+                <input type="url" class="form-control" id="postImage">
+              </div>
+              <button type="submit" class="btn btn-primary">Post</button>
             </form>
           </div>
-          <div class="col-md-4">
-            <button class="btn btn-primary" type="button" id="sortButton">Sort by date</button>
-            <button class="btn btn-success" type="button" id="createPostButton">Create post</button>
-
-          </div>
         </div>
       </div>
-      <div class="container" id="postContainer"></div>
-      <div>
+    </div>
 
+    <div class="container mt-5 postContainer" id="postContainer">
+      <div class="row all-posts_card-container"></div>
+      <div class="loader-container" style="display:none;">Loading...</div>
+      <div class="d-flex justify-content-center my-3">
+        <button class="btn btn-secondary" id="loadMoreButton" style="display: none;">Load More</button>
       </div>
-
-
-      
-    </main>
-    <footer class="py-3 my-4 mt-5">
-      <hr>
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-      </ul>
-      <p class="text-center text-muted">SLXEED</p>
-      <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
-    </footer>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-  </body>
+    </div>
+  </main>
+  <footer class="py-3 my-4 mt-5">
+    <hr>
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+    </ul>
+    <p class="text-center text-muted">SLXEED</p>
+    <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
+  </footer>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
