--- a/profile/index.html
+++ b/profile/index.html
@@ -1,88 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/dist/css/index.css"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <script src="../js/fetchProfile.mjs" type="module"></script>
-    <script src="../js/renderProfilePosts.mjs" type="module"></script>
-    <script src="../js/delete-post.mjs" type="module"></script>
-    <script type="module">
-      import { checkLoginStatus, logoutUser } from "../js/login.mjs";
-  
-      document.addEventListener("DOMContentLoaded", () => {
-        if (!checkLoginStatus()) {
-          window.location.href = "/index.html";
-        }
-  
-        const signOutButton = document.getElementById("signOutButton");
-        signOutButton.classList.remove("d-none");
-        signOutButton.addEventListener("click", logoutUser);
-      });
-    </script>
-    <title>SLXEED Profile</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar fixed-top navbar-expand-lg bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand fs-1 ms-3" href="../index.html">SLXEED</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link ms-3" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-3 active" aria-current="page" href="/profile/">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-3" href="/feed/">Feed</a>
-              </li>
-            </ul>
-            <button class="btn btn-outline-danger d-none" id="signOutButton">Sign Out</button>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/dist/css/index.css"/>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script src="../js/fetchProfile.mjs" type="module"></script>
+  <script src="../js/renderProfilePosts.mjs" type="module"></script>
+  <script src="../js/delete-post.mjs" type="module"></script>
+  <script type="module">
+    import { checkLoginStatus, logoutUser } from "../js/login.mjs";
+
+    document.addEventListener("DOMContentLoaded", () => {
+      if (!checkLoginStatus()) {
+        window.location.href = "/index.html";
+      }
+
+      const signOutButton = document.getElementById("signOutButton");
+      signOutButton.classList.remove("d-none");
+      signOutButton.addEventListener("click", logoutUser);
+    });
+  </script>
+  <title>SLXEED Profile</title>
+</head>
+<body>
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg bg-white">
+      <div class="container-fluid">
+        <a class="navbar-brand fs-1 ms-3" href="../index.html">SLXEED</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3 active" aria-current="page" href="/profile/">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="/feed/">Feed</a>
+            </li>
+          </ul>
+          <button class="btn btn-outline-danger d-none" id="signOutButton">Sign Out</button>
         </div>
-      </nav>
-    </header>
-    <main>
-      <h1 class="visually-hide mb-5">Profile</h1>
-      <img
-        id="userAvatar"
-        src=" "
-        class="profile-img mt-5 mb-2 mx-auto d-block rounded-circle"
-        alt="Profile image"
-      />
-      <h2 id="userName" class="text-center my-1"></h2>
-      <div class="text-center my-4">
       </div>
+    </nav>
+  </header>
+  <main class="mt-5">
+    <h1 class="visually-hidden mb-5">Profile</h1>
+    <div class="text-center mt-5 mb-2">
+      <img id="userAvatar" src="" class="profile-img rounded-circle" alt="Profile image" />
+    </div>
+    <h2 id="userName" class="text-center my-1"></h2>
+    <div class="text-center my-4">
+      <button class="btn btn-primary" id="followButton">Follow</button>
+    </div>
+    <div class="text-center my-4">
+      <p>Followers: <span id="followersCount">0</span></p>
+      <p>Following: <span id="followingCount">0</span></p>
+    </div>
 
-      <h3 class="text-center my-3">My posts</h3>
-
-
-      <div class="container">
-        <div class="row user-posts_profile-page gy-4"></div>
-      </div>
-    </main>
-    <footer class="py-3 my-4 mt-5">
-      <hr>
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-      </ul>
-      <p class="text-center text-muted">SLXEED</p>
-      <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
-    </footer>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    
-
-  </body>
+    <h3 class="text-center my-3">My posts</h3>
+    <div class="container">
+      <div class="row user-posts_profile-page gy-4"></div>
+      <div class="loader-container" style="display:none;">Loading...</div>
+    </div>
+  </main>
+  <footer class="py-3 my-4 mt-5">
+    <hr>
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+    </ul>
+    <p class="text-center text-muted">SLXEED</p>
+    <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
+  </footer>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
