--- a/feed/index.html
+++ b/feed/index.html
@@ -58,9 +58,9 @@
     <h1 class="visually-hidden mb-5">Feed</h1>
 
     <div class="mb-4 search-post-bar">
-      <div class="d-flex justify-content-between mb-3">
+      <div class="d-flex justify-content-between mb-3 search-bar-form">
         <form class="d-flex w-75" id="search-form">
-          <input type="search" class="form-control me-2" id="searchInput" placeholder="Search" aria-label="Search" />
+          <input type="search" class="form-control me-2" id="search-Input" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-primary" type="button" id="searchButton">Search</button>
         </form>
         <div class="dropdown">
