--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="dist/css/index.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="./js/login.mjs" type="module"></script>
-  <script src="./js/registerUser.mjs"></script>
+  <script src="./js/registerUser.mjs" type="module"></script>
   <script src="./js/variables.mjs" type="module"></script>
   <title>SLXEED HOME</title>
 </head>
