--- a/feed/index.html
+++ b/feed/index.html
@@ -8,6 +8,7 @@
     content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis."
   />
   <link rel="stylesheet" href="/dist/css/index.css"/>
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="../js/variables.mjs" type="module"></script>
   <script src="../js/fetchAllPosts.mjs" type="module"></script>
