--- a/profile/index.html
+++ b/profile/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/dist/css/index.css"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="../js/fetchProfile.mjs" type="module"></script>
   <script src="../js/renderProfilePosts.mjs" type="module"></script>
   <script src="../js/delete-post.mjs" type="module"></script>
