implemented the search function
made sure to make the postcard an array

--- a/feed/index.html
+++ b/feed/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta
-    name="description"
-    content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis."
-  />
+  <meta name="description" content="This is Sigrid Lydvo's blog feed. Here you can read all of her blog-posts that she writes. The blog posts can contain everything that affects her on a daily basis." />
   <link rel="stylesheet" href="/dist/css/index.css"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="../js/variables.mjs" type="module"></script>
@@ -61,7 +58,7 @@
       <div class="d-flex justify-content-between mb-3 search-bar-form">
         <form class="d-flex w-75" id="search-form">
           <input type="search" class="form-control me-2" id="search-Input" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-primary" type="button" id="searchButton">Search</button>
+          <button class="btn btn-outline-primary" type="submit" id="searchButton">Search</button>
         </form>
         <div class="dropdown">
           <button class="btn btn-success dropdown-toggle" type="button" id="createPostButton" data-bs-toggle="dropdown" aria-expanded="false">Create post</button>
@@ -89,7 +86,6 @@
         </div>
       </div>
     </div>
-    
 
     <div class="container mt-5 postContainer" id="postContainer">
       <div class="row all-posts_card-container"></div>
